--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.0",
     "framer-motion": "^11.3.21",
     "next": "14.2.5",
     "react": "^18",
